@@ -10,10 +10,10 @@ import java.util.Arrays;
 /**
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
-public class UniquePathFilterPipeTest extends TestCase {
+public class CyclicPathFilterPipeTest extends TestCase {
 
     public void testPipeBasic() {
-        Pipe pipe = new Pipeline(new CharacterCountPipe(), new CharacterCountPipe(), new UniquePathFilterPipe());
+        Pipe pipe = new Pipeline(new CharacterCountPipe(), new CharacterCountPipe(), new CyclicPathFilterPipe());
         pipe.setStarts(Arrays.asList("1", "11"));
         int counter = 0;
         while (pipe.hasNext()) {
